# apriorit

hw1/: CMakeLists.txt  README.txt
hw1/inc/: report.h
hw1/src/: main.cpp  report.cpp
hw10/: main.cpp
hw2/: codeReview.hpp
hw3/: CMakeLists.txt  README.txt
hw3/inc/: client.h  server.h
hw3/src/: client.cpp  main.cpp  server.cpp
hw4/: CMakeLists.txt  README.txt
hw4/inc/: simpleThreadPool.h
hw4/src/: main.cpp
hw6/: CMakeLists.txt  README.txt
hw6/inc/: shared_ptr.h  unique_ptr.h  weak_ptr.h
hw6/src/: main.cpp
hw7/: CMakeLists.txt  README.txt
hw7/inc/: linkedList.h
hw7/src/: main.cpp
